k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beewaf-svc
spec:
  selector:
    app: beewaf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
